-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.0.4
-
Component/s: None
-
Environment:Mongodb 8.0.4
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
v8.0
-
-
(copied to CRM)
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When issuing a reshardCollection command with `zones`, and when these zones are malformed, the resharding never completes and the config server starts crashing after reaching the "commit" stage.
Example of a malformed reshardCollection command
db.adminCommand(
{
reshardCollection: 'test.test',
key: {field: 1},
forceRedistribution: true,
zones: [
{
zone: 'shard-0',
min: { field: 'MinKey' },
max: {
field: '0x8888888888888888888888888888888888888888'
}
},
{
zone: 'shard-1',
min: {
field: '0x8888888888888888888888888888888888888888'
},
max: { field: 'MaxKey' }
}
]
}
)
Note that MinKey and MaxKey are strings and not instances of MinKey() or MaxKey(). In my case, this happened because I was generating the zones array via a script.
- is related to
-
SERVER-73763 Resharding does not extend zone ranges for config.tag docs, leading to config server primary fassert loop from duplicate key error
-
- Closed
-
- related to
-
SERVER-101431 Make setupZonesForTempNss use resharding::kMajorityWriteConcern
-
- Closed
-