SERVER-100785 Validate zone ranges specified on reshard command (#32674)

GitOrigin-RevId: 8658a40e0d79870f186087745646d1a500a1cc22