src/mongo/db/s/config/configsvr_reshard_collection_cmd.cpp
@@ -221,6 +221,7 @@ public:
                             ShardKeyPattern::checkShardKeyIsValidForMetadataStorage(zone.getMin()));
                         uassertStatusOK(
                             ShardKeyPattern::checkShardKeyIsValidForMetadataStorage(zone.getMax()));
+                        uassertStatusOK(ChunkRange::validate(zone.getMin(), zone.getMax()));
                     }
                 }
 
