src/mongo/db/s/resharding/resharding_util.cpp
@@ -234,22 +234,6 @@ void checkForOverlappingZones(std::vector<ReshardingZoneType>& zones) {
     }
 }
 
-std::vector<BSONObj> buildTagsDocsFromZones(const NamespaceString& tempNss,
-                                            std::vector<ReshardingZoneType>& zones,
-                                            const ShardKeyPattern& shardKey) {
-    std::vector<BSONObj> tags;
-    tags.reserve(zones.size());
-    for (auto& zone : zones) {
-        zone.setMin(shardKey.getKeyPattern().extendRangeBound(zone.getMin(), false));
-        zone.setMax(shardKey.getKeyPattern().extendRangeBound(zone.getMax(), false));
-        ChunkRange range(zone.getMin(), zone.getMax());
-        TagsType tag(tempNss, zone.getZone().toString(), range);
-        tags.push_back(tag.toBSON());
-    }
-
-    return tags;
-}
-
 std::vector<ReshardingZoneType> getZonesFromExistingCollection(OperationContext* opCtx,
                                                                const NamespaceString& sourceNss) {
     std::vector<ReshardingZoneType> zones;
